test/bad/or_introl_notor.pa
lemma bad : 0 = 0 {
    0 = 0 by eq_intro;
    0 = 0 by or_intro_l 0;
}
